--- a/deliverables/pike/os-net-config.yaml
+++ b/deliverables/pike/os-net-config.yaml
@@ -10,5 +10,9 @@ releases:
   - hash: e7e81ac01122dd1b7711116d583a69fb655e0bca
     repo: openstack/os-net-config
   version: 7.0.0
+- projects:
+  - hash: 9ef9a7a92dc7af2a7d54affd68aaa37539296dd4
+    repo: openstack/os-net-config
+  version: 7.1.0
 team: tripleo
 type: other
