Update pymod2pkg to 0.8.1
This contains a fix for the libvirt-python mapping.

Change-Id: Ib51e51305e0ea8264df49a0f86cda457018fb38d

--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -75,3 +75,7 @@ releases:
     projects:
       - repo: openstack/pymod2pkg
         hash: 14a0e8dcdd59966dea00814c2103455e6c0a5164
+  - version: 0.8.1
+    projects:
+      - repo: openstack/pymod2pkg
+        hash: 3a40ab72908d866f57972c746f344485803d151e
