--- a/deliverables/pike/python-zunclient.yaml
+++ b/deliverables/pike/python-zunclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: fa61ba016e95d22d71eca565c32f4a4d8bdb7d22
+  - version: 0.3.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: 9b4f4a389cfc429d8a2a23df242ff7b62dd69e8d
