Add final release of oslo.config for Pike
We just merge some bug fix recenetly, need another release for
oslo.config.

* 204faeb 2017-07-18 16:24:11 -0400 fix an issue with looking up
  deprecated option names in code
* a9aa7c6 2017-07-18 11:57:40 -0400 Fix python 3.6 escape char warnings
  in strings
* 2d0ba09 2017-07-18 13:49:25 -0400 handle option defaults that are not
  strings

Change-Id: I2ef7ac8634b68ae254520520fc08afc2e3e2caab

--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -57,3 +57,7 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: 608a15ea61ae846c07624e869c16d37781c2a8ce
+- version: 4.10.0
+  projects:
+  - repo: openstack/oslo.config
+    hash: 11c39ac065c36259af6ff688abe3383fab7b2f1a
