--- a/deliverables/pike/heat-agents.yaml
+++ b/deliverables/pike/heat-agents.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/heat-agents
         hash: 887f06ab4c6248b0ce1a4873ce9b1319943c6e3b
+  - version: 1.3.0
+    projects:
+      - repo: openstack/heat-agents
+        hash: bd91db747d4597eb86e6b58483624f660e465bf5
