--- a/deliverables/pike/paunch.yaml
+++ b/deliverables/pike/paunch.yaml
@@ -16,3 +16,7 @@ releases:
     projects:
       - repo: openstack/paunch
         hash: c8e22e55af4a844bd380689b541f7d9b9504ef63
+  - version: 1.3.0
+    projects:
+      - repo: openstack/paunch
+        hash: 039f2c9c0298e4f2b58cb8bf97d60fac45b7829d
