--- a/deliverables/pike/tooz.yaml
+++ b/deliverables/pike/tooz.yaml
@@ -62,3 +62,7 @@ releases:
   projects:
   - repo: openstack/tooz
     hash: 38bcf7bbdb4a5f53ac81d45f2b7c310e5ea5f4da
+- version: 1.58.0
+  projects:
+  - repo: openstack/tooz
+    hash: c2167820c89490dba39c1763e51ab663f06a13be
