--- a/deliverables/pike/sushy.yaml
+++ b/deliverables/pike/sushy.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/sushy
         hash: 963c83ab783ad829fe385e33a059c4f5a8718a99
+  - version: 1.0.0
+    projects:
+      - repo: openstack/sushy
+        hash: f6e6d8ff7f42974df81b90bf092a9b7414ec5d4d
