--- a/deliverables/pike/ironic-lib.yaml
+++ b/deliverables/pike/ironic-lib.yaml
@@ -17,3 +17,7 @@ releases:
     projects:
       - repo: openstack/ironic-lib
         hash: 56e761936623fe6c66bccfe946276a27df7a78c8
+  - version: 2.9.0
+    projects:
+      - repo: openstack/ironic-lib
+        hash: dcc5a473c77be5df68509fdfd91169845d9927f6
