--- a/deliverables/pike/django_openstack_auth.yaml
+++ b/deliverables/pike/django_openstack_auth.yaml
@@ -26,3 +26,10 @@ releases:
     highlights: >
       This release includes support for Django 1.11, as well as the usual
       bug fix and translation improvements.
+  - version: 3.5.0
+    projects:
+      - repo: openstack/django_openstack_auth
+        hash: 2ca726c68e92b6aaec0e7b0d6a425063972b870b
+    highlights: >
+      This release increases requirements to allow Django 1.11, and adds
+      support for a DEFAULT_SERVICE_REGIONS setting.
