--- a/deliverables/pike/keystoneauth.yaml
+++ b/deliverables/pike/keystoneauth.yaml
@@ -20,3 +20,8 @@ releases:
       - repo: openstack/keystoneauth
         hash: 0be140389bcbb2df44840af921ea8cb4f1a231d5
         tarball-base: keystoneauth1
+  - version: 3.0.0
+    projects:
+      - repo: openstack/keystoneauth
+        hash: 353b9260428e7d7c83134e1d74b50d8610e86188
+        tarball-base: keystoneauth1
