pike: release os-traits 0.3.3
This is expected to be the final release for os-traits
before the Pike GA.

Since the only changes are docs infrastructure and
minor requirements changes (blacklist in requirements.txt
for pbr and some changes in test-requirements.txt), this
is a patch version update.

Change-Id: I35f49e5ad468e39b7ba4464b3a3a69025de3826b

--- a/deliverables/pike/os-traits.yaml
+++ b/deliverables/pike/os-traits.yaml
@@ -26,3 +26,7 @@ releases:
     projects:
       - repo: openstack/os-traits
         hash: c091deb9b5540e02d72488883228ef426fb737e7
+  - version: 0.3.3
+    projects:
+      - repo: openstack/os-traits
+        hash: 3e8b4a77aaf2d8b64f89ba3b479113d0b44bbe2f
