--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ console_scripts =
     get-deliverable-owner = openstack_releases.cmds.get_deliverable_owner:main
     propose-final-releases = openstack_releases.cmds.propose_final_releases:main
     make-tracking-pad = openstack_releases.cmds.make_tracking_pad:main
+    propose-library-branches = openstack_releases.cmds.propose_library_branches:main
 
 [extras]
 sphinxext =
