--- a/deliverables/pike/keystonemiddleware.yaml
+++ b/deliverables/pike/keystonemiddleware.yaml
@@ -13,3 +13,7 @@ releases:
   projects:
   - repo: openstack/keystonemiddleware
     hash: 5bd147435a7b7c0638e8ad1b618a64b5ab9b7e90
+- version: 4.17.0
+  projects:
+  - repo: openstack/keystonemiddleware
+    hash: 4a72cd6c3b3139dd2b55787eff5b84741cc0a347
