Cinder stable/ocata 10.0.4 release
Bug fixes.

Change-Id: If961d1aebd7494ddb3a3a3d5fdcf0f57bf9f455a

--- a/deliverables/ocata/cinder.yaml
+++ b/deliverables/ocata/cinder.yaml
@@ -45,3 +45,7 @@ releases:
     projects:
       - repo: openstack/cinder
         hash: 23ddc7cbc668ed9b2e38583ce84924ea09e70994
+  - version: 10.0.4
+    projects:
+      - repo: openstack/cinder
+        hash: 4c5a29a8638f0ddb03f595516788255680ae13bc
