--- a/deliverables/pike/oslo.config.yaml
+++ b/deliverables/pike/oslo.config.yaml
@@ -61,3 +61,7 @@ releases:
   projects:
   - repo: openstack/oslo.config
     hash: 11c39ac065c36259af6ff688abe3383fab7b2f1a
+- version: 4.11.0
+  projects:
+  - repo: openstack/oslo.config
+    hash: dfc70fa88e01b8c6ca1ab15a4b80bd33e87ced85
