--- a/deliverables/ocata/tooz.yaml
+++ b/deliverables/ocata/tooz.yaml
@@ -33,3 +33,7 @@ releases:
     projects:
       - repo: openstack/tooz
         hash: 914ddf405221280ab50af48cc6b7d581a0380033
+  - version: 1.48.2
+    projects:
+      - repo: openstack/tooz
+        hash: 0dc996b92dd66a5da5e75966df3a59fabc6df420
