--- a/deliverables/ocata/monasca-agent.yaml
+++ b/deliverables/ocata/monasca-agent.yaml
@@ -35,3 +35,7 @@ releases:
     projects:
       - repo: openstack/monasca-agent
         hash: 6d196569a0858c177a6f6d04169a860617f5e48f
+  - version: 1.10.0
+    projects:
+      - repo: openstack/monasca-agent
+        hash: fd0278f7d7c4d15d7e3785f3fa1dba3602476087
