--- a/deliverables/pike/keystoneauth.yaml
+++ b/deliverables/pike/keystoneauth.yaml
@@ -25,3 +25,8 @@ releases:
       - repo: openstack/keystoneauth
         hash: 353b9260428e7d7c83134e1d74b50d8610e86188
         tarball-base: keystoneauth1
+  - version: 3.0.1
+    projects:
+      - repo: openstack/keystoneauth
+        hash: ccbd20ed9c15ced50d1c996d5b6971b97b2c7a78
+        tarball-base: keystoneauth1
