--- a/deliverables/pike/python-karborclient.yaml
+++ b/deliverables/pike/python-karborclient.yaml
@@ -13,3 +13,7 @@ releases:
   projects:
   - repo: openstack/python-karborclient
     hash: 7bb1cc2c7afa6722f3cd5a1bf5dfd6856a8ab4f0
+- version: 0.5.0
+  projects:
+  - repo: openstack/python-karborclient
+    hash: 4839860b73d220c6639d62d622c95d94e55a3f6a
