--- a/deliverables/newton/magnum.yaml
+++ b/deliverables/newton/magnum.yaml
@@ -28,3 +28,7 @@ releases:
     projects:
       - repo: openstack/magnum
         hash: 98f4ae9942ee55c1e7454bb257f21d935c403cb2
+  - version: 3.3.1
+    projects:
+      - repo: openstack/magnum
+        hash: ce5133ce56e3635bde8097a3eaf4b2c86a9a14e9
