--- a/deliverables/ocata/magnum.yaml
+++ b/deliverables/ocata/magnum.yaml
@@ -24,3 +24,7 @@ releases:
     projects:
       - repo: openstack/magnum
         hash: bdddbdf2defd5b8cd4996ee6163746571146ea7c
+  - version: 4.1.3
+    projects:
+      - repo: openstack/magnum
+        hash: b410770989fb53fed170a1fa503fe8ba176a5e6d
