--- a/deliverables/pike/karbor.yaml
+++ b/deliverables/pike/karbor.yaml
@@ -8,3 +8,7 @@ releases:
   projects:
   - repo: openstack/karbor
     hash: 539e3ade1e5429d67d0b7eb0019e009683a27f16
+- version: 0.4.0
+  projects:
+  - repo: openstack/karbor
+    hash: 5516e645ca0abf9b0917ab0267fc53b54c4e7687
