--- a/deliverables/newton/keystone.yaml
+++ b/deliverables/newton/keystone.yaml
@@ -45,3 +45,7 @@ releases:
   projects:
   - repo: openstack/keystone
     hash: 05a129e54573b6cbda1ec095f4526f2b9ba90a90
+- version: 10.0.3
+  projects:
+  - repo: openstack/keystone
+    hash: bd49c3ef6daa474e9c84c0d8721c0f6812ee3d2c
