--- a/deliverables/ocata/keystone.yaml
+++ b/deliverables/ocata/keystone.yaml
@@ -37,3 +37,7 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: 736149c0cd91e66121229ed9aea8ddc90ea2eb26
+  - version: 11.0.3
+    projects:
+      - repo: openstack/keystone
+        hash: 439872bc196260fe62e52235e0717040fd934394
