--- a/deliverables/pike/os-collect-config.yaml
+++ b/deliverables/pike/os-collect-config.yaml
@@ -10,5 +10,9 @@ releases:
   - hash: bf91feb19862b1431c300623ceffe6d40ba64c47
     repo: openstack/os-collect-config
   version: 7.0.0
+- projects:
+  - hash: 5be5fe782f4e5802c4250f4a1f7fe3b6e4f9221a
+    repo: openstack/os-collect-config
+  version: 7.1.0
 team: tripleo
 type: other
