--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-tripleo
     hash: 1041ef2305c0261608d52ad9c727667be4e76d99
+- version: 7.2.0
+  projects:
+  - repo: openstack/puppet-tripleo
+    hash: 1fd05b4a04cfc2e24b7551861c1ece483506102a
 team: tripleo
 type: other
