--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/tripleo-heat-templates
     hash: 24c0e0d728162ef6be0593f2c65f2a7543a5aca4
+- version: 7.0.0.0b3
+  projects:
+  - repo: openstack/tripleo-heat-templates
+    hash: 4a441359fba69b754cbae1fb13c82fb7472f29b6
 team: tripleo
 type: other
