--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/tripleo-ui
     hash: 0d25eb2b853271feae637fbeedc8fccfd1dae0c7
+- version: 7.2.0
+  projects:
+  - repo: openstack/tripleo-ui
+    hash: 7221abb0336f1f6dfb19b8ba38a87ba7bd9be727
 team: tripleo
 type: other
