--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/tripleo-validations
     hash: f3b1e39f9443dfdc068f46273f921f3e8e5c1662
+- version: 7.2.0
+  projects:
+  - repo: openstack/tripleo-validations
+    hash: 7c28e26de45453454aad5b3d9eeb101f1e2608f8
 team: tripleo
 type: other
