--- a/deliverables/pike/paunch.yaml
+++ b/deliverables/pike/paunch.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/paunch
         hash: 039f2c9c0298e4f2b58cb8bf97d60fac45b7829d
+  - version: 1.4.0
+    projects:
+      - repo: openstack/paunch
+        hash: 039f2c9c0298e4f2b58cb8bf97d60fac45b7829d
