--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -22,5 +22,9 @@ releases:
   projects:
   - hash: 5a6423b7d7bcaaf218ecc8328c7c0469c095f6c5
     repo: openstack/tripleo-common
+- version: 7.4.0
+  projects:
+  - hash: 98ada9b30dd85ebd3be368431a51ab82541d5001
+    repo: openstack/tripleo-common
 team: tripleo
 type: other
