--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -10,5 +10,9 @@ releases:
   - hash: 401d86195038abd6cc4d95d89b7fcc41c4fe6f2f
     repo: openstack/tripleo-image-elements
   version: 7.0.0.0b2
+- projects:
+  - hash: f3f06c7704b60236fbf7a40addaf9bdd24f7867a
+    repo: openstack/tripleo-image-elements
+  version: 7.0.0.0b3
 team: tripleo
 type: other
