--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -133,3 +133,7 @@ releases:
     projects:
       - repo: openstack/openstackdocstheme
         hash: 4d2797d14b8d70e63fe699e3c92d6111f6a63e97
+  - version: 1.15.0
+    projects:
+      - repo: openstack/openstackdocstheme
+        hash: d602fa119b1ae7daa2636543d3823ee73889c5b1
