ceilometer: Release 7.1.0 (newton)
Change-Id: I8f4eedf445fc1a276ae245be1307ac982f59085c

--- a/deliverables/newton/ceilometer.yaml
+++ b/deliverables/newton/ceilometer.yaml
@@ -53,3 +53,7 @@ releases:
     projects:
       - repo: openstack/ceilometer
         hash: ffc9e56c3c259c21578254d9f7656b9468dc5613
+  - version: 7.1.0
+    projects:
+      - repo: openstack/ceilometer
+        hash: 327648f0d24c9f8326057175db6f1634389a1775
