ceilometer: Release 8.1.0 (ocata)
Change-Id: I108cb6ef3f0f2ee6dc6623f8f06df40126c92c96

--- a/deliverables/ocata/ceilometer.yaml
+++ b/deliverables/ocata/ceilometer.yaml
@@ -20,3 +20,7 @@ releases:
     projects:
       - repo: openstack/ceilometer
         hash: cd9673fcd73fa5f55f6c439be4bb00468d52ddb7
+  - version: 8.1.0
+    projects:
+      - repo: openstack/ceilometer
+        hash: c98aed68189167f0139ff041985b27e407ebddc6
