--- a/deliverables/pike/watcher.yaml
+++ b/deliverables/pike/watcher.yaml
@@ -3,6 +3,7 @@ launchpad: watcher
 release-model: cycle-with-intermediary
 team: watcher
 type: service
+release-notes: https://docs.openstack.org/releasenotes/watcher/unreleased.html
 releases:
   - version: 1.1.0
     projects:
