--- a/deliverables/pike/python-monascaclient.yaml
+++ b/deliverables/pike/python-monascaclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-monascaclient
         hash: 3a320ee5d14e343debf97a5d06b1af8f24ed8e02
+  - version: 1.7.0
+    projects:
+      - repo: openstack/python-monascaclient
+        hash: 6b6c4843eae25bb4d323134d6e210af2162a4b3f
