--- a/deliverables/pike/python-openstackclient.yaml
+++ b/deliverables/pike/python-openstackclient.yaml
@@ -17,3 +17,7 @@ releases:
     projects:
       - repo: openstack/python-openstackclient
         hash: c69304e3d365dc2c67fab298eba0b9097d3819da
+  - version: 3.12.0
+    projects:
+      - repo: openstack/python-openstackclient
+        hash: f67ebce530d13c8da4ad32556d93095ab0ff0392
