--- a/deliverables/ocata/tripleo-puppet-elements.yaml
+++ b/deliverables/ocata/tripleo-puppet-elements.yaml
@@ -31,5 +31,9 @@ releases:
   - hash: f98d819796f9aef0d8d854ffce077e541155e5e7
     repo: openstack/tripleo-puppet-elements
   version: 6.1.0
+- projects:
+  - hash: 1520a180ad0328905092653473a49dee619aaac8
+    repo: openstack/tripleo-puppet-elements
+  version: 6.2.0
 team: tripleo
 type: other
