--- a/deliverables/pike/freezer-web-ui.yaml
+++ b/deliverables/pike/freezer-web-ui.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/freezer-web-ui
         hash: bd2b8b52febcd7df328d18e7d52572e0e83de23b
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/freezer-web-ui
+        hash: e779891638f0d57c79daca98f466246574605021
