--- a/deliverables/pike/freezer.yaml
+++ b/deliverables/pike/freezer.yaml
@@ -20,3 +20,11 @@ releases:
         hash: 746dae2f7b194a2b76b36b2d16292833d76a441c
       - repo: openstack/freezer-dr
         hash: 4d11ee77d320ca2d87e12342f472427b0cc2753a
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/freezer
+        hash: 303172d85ae615aa20a632130b21d0e5eda88979
+      - repo: openstack/freezer-api
+        hash: 4557ea072306179e63e9b3315724590a09f45b8f
+      - repo: openstack/freezer-dr
+        hash: 4962bae5a770e6d9032fd172fb6db55f8247a913
