--- a/deliverables/pike/python-freezerclient.yaml
+++ b/deliverables/pike/python-freezerclient.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/python-freezerclient
         hash: a22fbf5dde73074bb5c3ce67ec57600f9774df1a
+  - version: 1.5.0
+    projects:
+      - repo: openstack/python-freezerclient
+        hash: 1974aeadae1da9cff5420c7dba032045a75a9696
