--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -137,3 +137,7 @@ releases:
     projects:
       - repo: openstack/openstackdocstheme
         hash: d602fa119b1ae7daa2636543d3823ee73889c5b1
+  - version: 1.16.0
+    projects:
+      - repo: openstack/openstackdocstheme
+        hash: 979785c760d6d4ffe46fa09037844657a32eb727
