--- a/deliverables/pike/senlin.yaml
+++ b/deliverables/pike/senlin.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/senlin
         hash: 4189315757bb30e38a08c2956d0cc49204f2eaf3
+  - version: 4.0.0.0b3
+    projects:
+      - repo: openstack/senlin
+        hash: d59e40f4609ecb18b24713bd94fa7d2e290b431c
