--- a/deliverables/pike/python-senlinclient.yaml
+++ b/deliverables/pike/python-senlinclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-senlinclient
         hash: 2c6dce877e3d1c74b63f9c9a4a1a7d842ec9bcd5
+  - version: 1.4.0
+    projects:
+      - repo: openstack/python-senlinclient
+        hash: cfdf62a47031d6ad3a8bc88ea3c25c08e04865c8
