--- a/deliverables/pike/barbican.yaml
+++ b/deliverables/pike/barbican.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/barbican
         hash: 6fdead95937dcc7975bee53ea514cc3e40ce9e6f
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/barbican
+        hash: fdfa516a67fd845ccaf78af2e13c1653f860f842
