--- a/deliverables/pike/python-barbicanclient.yaml
+++ b/deliverables/pike/python-barbicanclient.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/python-barbicanclient
         hash: 439ee25dc6c998e5571022ce0094a10c2611d717
+  - version: 4.5.0
+    projects:
+      - repo: openstack/python-barbicanclient
+        hash: adce2c1a6070fc3c381cb3da9e9f31821fe4b52d
