--- a/deliverables/pike/puppet-aodh.yaml
+++ b/deliverables/pike/puppet-aodh.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-aodh
     hash: 01e5448ab6853d7a12927683f327369237706444
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-aodh
+    hash: 4954b5e62641087c11486821b801757a3b56b5ed
 team: Puppet OpenStack
 type: other
