--- a/deliverables/pike/puppet-ceilometer.yaml
+++ b/deliverables/pike/puppet-ceilometer.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-ceilometer
     hash: ea0272ff35660c6fafe7ea97f15d77c46ecad180
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-ceilometer
+    hash: ff39854f4f0c6077b0767cf7d163c8043517d103
 team: Puppet OpenStack
 type: other
