--- a/deliverables/pike/puppet-cinder.yaml
+++ b/deliverables/pike/puppet-cinder.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-cinder
     hash: 257519db52de13a036e4b5ba81216ca74a17d9ed
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-cinder
+    hash: dab970ae3b42baa2ab150cd679d97d9ff9cfe608
 team: Puppet OpenStack
 type: other
