--- a/deliverables/pike/puppet-designate.yaml
+++ b/deliverables/pike/puppet-designate.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-designate
     hash: 1c8b37123c3335f3a2070488c483d1a9c69a68f9
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-designate
+    hash: a39305508133db8a7d964cafda8f8689264618e0
 team: Puppet OpenStack
 type: other
