--- a/deliverables/pike/puppet-ec2api.yaml
+++ b/deliverables/pike/puppet-ec2api.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-ec2api
     hash: 4e7edbb45dc295b8130cd7c432bc6c6eec52e273
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-ec2api
+    hash: 657b3cee88ff57e1f6617c4491ebbe01f22e8e42
 team: Puppet OpenStack
 type: other
