--- a/deliverables/pike/puppet-glance.yaml
+++ b/deliverables/pike/puppet-glance.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-glance
     hash: 36065118063ead286f7aae6c8989f4985a7ab630
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-glance
+    hash: 4182ef6065bd75b8cc19874de646b2eee22aa1f6
 team: Puppet OpenStack
 type: other
