--- a/deliverables/pike/puppet-gnocchi.yaml
+++ b/deliverables/pike/puppet-gnocchi.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-gnocchi
     hash: 0f2440227662fc113180bd438701d71629e2f88f
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-gnocchi
+    hash: 3ab9386d33ad568cd0721278e52a6ccca504b821
 team: Puppet OpenStack
 type: other
