--- a/deliverables/pike/puppet-heat.yaml
+++ b/deliverables/pike/puppet-heat.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-heat
     hash: 441af5bb3f6b3c786e9f41582ffdcf0125f5618d
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-heat
+    hash: 380353399e028e9274b6925cfb22336bd2c18b3a
 team: Puppet OpenStack
 type: other
