--- a/deliverables/pike/puppet-horizon.yaml
+++ b/deliverables/pike/puppet-horizon.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-horizon
     hash: 219a31f4beb81948ee632876caa651f07abd4e22
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-horizon
+    hash: a46538e6efafc1b9c95688ff36c7505c40021ffe
 team: Puppet OpenStack
 type: other
