--- a/deliverables/pike/puppet-ironic.yaml
+++ b/deliverables/pike/puppet-ironic.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-ironic
     hash: c5d183308eb59bc3e6a41528e74b3f91a91501c4
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-ironic
+    hash: 4a27e03c206314ef7d6d05b870c7ceebc0c05c06
 team: Puppet OpenStack
 type: other
