--- a/deliverables/pike/puppet-keystone.yaml
+++ b/deliverables/pike/puppet-keystone.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-keystone
     hash: 488a91ff18b6c60cb898b0f31bd8d339da991600
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-keystone
+    hash: c419058823800a4a7f1c80ac46c9095e0f1c1abf
 team: Puppet OpenStack
 type: other
