--- a/deliverables/pike/puppet-magnum.yaml
+++ b/deliverables/pike/puppet-magnum.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-magnum
     hash: 3004b1ea53ebf817f6e1ea3e8de397506bdd2611
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-magnum
+    hash: bc082235035cec6539aa57c36d9bf2004797c312
 team: Puppet OpenStack
 type: other
