--- a/deliverables/pike/puppet-mistral.yaml
+++ b/deliverables/pike/puppet-mistral.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-mistral
     hash: 53d9021996d3e6daa844bda71b2d07deecb93b10
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-mistral
+    hash: 97f7ca4a8c4d04aec9dc36fe233d7b74ba15fc7a
 team: Puppet OpenStack
 type: other
