--- a/deliverables/pike/puppet-murano.yaml
+++ b/deliverables/pike/puppet-murano.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-murano
     hash: aa12ee45015f561293af461d3b9888f7d846a897
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-murano
+    hash: f7ddcf5d61489f480774898a5dcf7cdc5f08ffb1
 team: Puppet OpenStack
 type: other
