--- a/deliverables/pike/puppet-neutron.yaml
+++ b/deliverables/pike/puppet-neutron.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-neutron
     hash: 888c480eab625e3f3aee32be818433bc7a4e6d6c
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-neutron
+    hash: 63a00045929fb3483866df9eea0390ebee5f52c5
 team: Puppet OpenStack
 type: other
