--- a/deliverables/pike/puppet-nova.yaml
+++ b/deliverables/pike/puppet-nova.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-nova
     hash: 27baec7dd0c92d10dcfba2242593a7149c3e93d2
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-nova
+    hash: dad40312ebc12c3f79ef71fc0649342c102b59fa
 team: Puppet OpenStack
 type: other
