--- a/deliverables/pike/puppet-octavia.yaml
+++ b/deliverables/pike/puppet-octavia.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-octavia
     hash: 87d98c5fc9505e693d162b0ead5eab6fa029612e
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-octavia
+    hash: fcf164292e738fc593a2a35f59e5dd4ad9a00a33
 team: Puppet OpenStack
 type: other
