--- a/deliverables/pike/puppet-openstack_extras.yaml
+++ b/deliverables/pike/puppet-openstack_extras.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-openstack_extras
     hash: a3e8944d21c4dd9c08b1e55f4c7bd9033d6c7c7c
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-openstack_extras
+    hash: 17028c8ed1630550b5c44311dd57ae7fbcd0127d
 team: Puppet OpenStack
 type: other
