--- a/deliverables/pike/puppet-openstacklib.yaml
+++ b/deliverables/pike/puppet-openstacklib.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-openstacklib
     hash: c6f6a3f8970cc3a88621015b858c78ac7403b3a4
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-openstacklib
+    hash: b0201b3411067bc1818f027b71e82d0e1b0dd573
 team: Puppet OpenStack
 type: other
