--- a/deliverables/pike/puppet-oslo.yaml
+++ b/deliverables/pike/puppet-oslo.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-oslo
     hash: 16b7efb0e5a8f5ebb7e7306312f6f235233c3ae9
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-oslo
+    hash: d5f07caaad7f60083903252b042293b016722f34
 team: Puppet OpenStack
 type: other
