--- a/deliverables/pike/puppet-ovn.yaml
+++ b/deliverables/pike/puppet-ovn.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-ovn
     hash: dfa22cdc83ab3c354726af78e0a2d7d8bf6f035e
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-ovn
+    hash: 7458b65e4911fcb10ef5299af74155cc29cb1e6f
 team: Puppet OpenStack
 type: other
