--- a/deliverables/pike/puppet-panko.yaml
+++ b/deliverables/pike/puppet-panko.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-panko
     hash: b884e37f65e0a000eeb5d07a432a2d3fd9423f54
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-panko
+    hash: ff16a2a73922b9f67230f682d8f09d1e56a07079
 team: Puppet OpenStack
 type: other
