--- a/deliverables/pike/puppet-swift.yaml
+++ b/deliverables/pike/puppet-swift.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-swift
     hash: 4955428bf0fec3aba49adc063cd41ab5923e02fd
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-swift
+    hash: ccc40c93cfe9155c680da1debef8f2ee53ca017d
 team: Puppet OpenStack
 type: other
