--- a/deliverables/pike/puppet-tempest.yaml
+++ b/deliverables/pike/puppet-tempest.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-tempest
     hash: b9f84e4d331b69cc626c00e000927973b8c13a7b
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-tempest
+    hash: a5c3f4f0902e1d98a57cb9934562a43718f8c612
 team: Puppet OpenStack
 type: other
