--- a/deliverables/pike/puppet-vswitch.yaml
+++ b/deliverables/pike/puppet-vswitch.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-vswitch
     hash: ee4b10535131582d883101b8c63c8ef7252d0259
+- version: 7.2.0
+  projects:
+  - repo: openstack/puppet-vswitch
+    hash: 1961ac7a0029342d17c22f019706544ee9106aa5
 team: Puppet OpenStack
 type: other
