--- a/deliverables/pike/puppet-watcher.yaml
+++ b/deliverables/pike/puppet-watcher.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-watcher
     hash: 056cce1a8a7e90f85a1647ce60f892bf50aef90c
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-watcher
+    hash: 15d460cca30e7a60bf573c443c3228d6236f36cd
 team: Puppet OpenStack
 type: other
