--- a/deliverables/pike/puppet-barbican.yaml
+++ b/deliverables/pike/puppet-barbican.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-barbican
     hash: 3920930183e293735a33c5c92aa12aa233c638c6
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-barbican
+    hash: af2e61dc70e4741216bcc4705a77e2985cb54894
 team: Puppet OpenStack
 type: other
