--- a/deliverables/pike/puppet-congress.yaml
+++ b/deliverables/pike/puppet-congress.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-congress
     hash: 0035a37cc654815e420648dee79d16b83a3c4b5a
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-congress
+    hash: c165c35de182fbbd24a6dd396c1488035f8a377e
 team: Puppet OpenStack
 type: other
