--- a/deliverables/pike/puppet-manila.yaml
+++ b/deliverables/pike/puppet-manila.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-manila
     hash: 6ac9ba225a6a2f59fa601e147cc496907acae9be
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-manila
+    hash: 74267304083ea576c1f0850a618d54ffb689e5ea
 team: Puppet OpenStack
 type: other
