--- a/deliverables/pike/puppet-tacker.yaml
+++ b/deliverables/pike/puppet-tacker.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-tacker
     hash: 168cf5db319eb23869bad800c80798360549a018
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-tacker
+    hash: a1d4f414d2e1aaee2e5b160d6458153d57e2043f
 team: Puppet OpenStack
 type: other
