--- a/deliverables/pike/puppet-trove.yaml
+++ b/deliverables/pike/puppet-trove.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-trove
     hash: 28db9f952af1d0f4e5d304e86ffab1c7dcaf5f47
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-trove
+    hash: 3fdefbfb4622ebdbb348f12cdecafb0fff43a28f
 team: Puppet OpenStack
 type: other
