--- a/deliverables/pike/puppet-zaqar.yaml
+++ b/deliverables/pike/puppet-zaqar.yaml
@@ -10,5 +10,9 @@ releases:
   projects:
   - repo: openstack/puppet-zaqar
     hash: 9697f99915d9a0beb7ff16def9703558dba5a78d
+- version: 11.2.0
+  projects:
+  - repo: openstack/puppet-zaqar
+    hash: fe32e6c9ce485c857a2cae590753e415ae973387
 team: Puppet OpenStack
 type: other
