Designate Pike-3 deliverables
Designate and designate-dashboard releases for pike milestone 3

Change-Id: I688023656b3a65a53f69566554eb251845648d30

--- a/deliverables/pike/designate-dashboard.yaml
+++ b/deliverables/pike/designate-dashboard.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/designate-dashboard
         hash: 8113ea0addaebe8eab2cbd0672d4d844443cf840
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/designate-dashboard
+        hash: 19b1f1c42177b067a3ec598947c0e8f263d11b88
