--- a/deliverables/pike/designate.yaml
+++ b/deliverables/pike/designate.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/designate
         hash: 8f4adefbedd5a3c4214cafc01d3f6a4a102e99bf
+  - version: 5.0.0.0b3
+    projects:
+      - repo: openstack/designate
+        hash: accd70a656ef229a085850d358d8a4025cc3ccd2
