--- a/deliverables/pike/python-brick-cinderclient-ext.yaml
+++ b/deliverables/pike/python-brick-cinderclient-ext.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-brick-cinderclient-ext
         hash: e8e7463ce4e62793706bc41b997c92882b0eb00f
+  - version: 0.5.0
+    projects:
+      - repo: openstack/python-brick-cinderclient-ext
+        hash: a03d5348b4b6855755223349e4054ed9d3146774
