request congess client release
Change-Id: Icab0af7de6bc05773e70e7a793ab6c1dbe9150a6

--- a/deliverables/pike/python-congressclient.yaml
+++ b/deliverables/pike/python-congressclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-congressclient
         hash: 5fc1bab873627fe793d9f2d0f6c0030d29718646
+  - version: 1.8.0
+    projects:
+      - repo: openstack/python-congressclient
+        hash: e2baac279652ce53d39f1b0953c731a77c189faa
