--- a/deliverables/pike/keystoneauth.yaml
+++ b/deliverables/pike/keystoneauth.yaml
@@ -30,3 +30,8 @@ releases:
       - repo: openstack/keystoneauth
         hash: ccbd20ed9c15ced50d1c996d5b6971b97b2c7a78
         tarball-base: keystoneauth1
+  - version: 3.1.0
+    projects:
+      - repo: openstack/keystoneauth
+        hash: 81363eca7903c2dc01d39b4c1569a6750ff13502
+        tarball-base: keystoneauth1
