request congress pike-3 release
Change-Id: Ic4ec13cbd8c5f206c170de595e612ded0f859a95

--- a/deliverables/pike/congress.yaml
+++ b/deliverables/pike/congress.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/congress
         hash: 9fc1d330e5e81a9559d70e67119b412d48af56ac
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/congress
+        hash: afd02fb985b6d10fcdbe8ddcd32e7f14d8d012aa
