request congress-dashboard pike-3 release
Change-Id: I58fc9d4fa0ee6cfcf42dd793427b117b350f88fa

--- a/deliverables/pike/congress-dashboard.yaml
+++ b/deliverables/pike/congress-dashboard.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/congress-dashboard
         hash: 9ce12571a6cbe21fbe8ea862f7ab73385529f70f
+  - version: 1.0.0.0b3
+    projects:
+      - repo: openstack/congress-dashboard
+        hash: 491c96dfaa70fae9784815ceae28285cfa2efa17
