python-swiftclient 3.4.0 for pike
Change-Id: Icef60cfe6a479f3f536b03891095b37ac34800b7

--- a/deliverables/pike/python-swiftclient.yaml
+++ b/deliverables/pike/python-swiftclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-swiftclient
 release-model: cycle-with-intermediary
 team: swift
 type: library
+releases:
+  - version: 3.4.0
+    projects:
+      - repo: openstack/python-swiftclient
+        hash: e1945ea0fac3badd23013b5b559be1f8a79bf114
