--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -79,3 +79,7 @@ releases:
     projects:
       - repo: openstack/pymod2pkg
         hash: 3a40ab72908d866f57972c746f344485803d151e
+  - version: 0.8.2
+    projects:
+      - repo: openstack/pymod2pkg
+        hash: 4dbe2ab4357d95f1a648eddb53b7d88bab890b52
