Add p-3 releases for murano projects
Change-Id: Iac5eaa92e7287191f94705d04ffc3ccfe76a153c

--- a/deliverables/pike/murano-dashboard.yaml
+++ b/deliverables/pike/murano-dashboard.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: 733dbf01866214acc9d122ba3b3b2e1cf809257e
+  - version: 4.0.0.0b3
+    projects:
+      - repo: openstack/murano-dashboard
+        hash: 2cca405b1d577a6efcfba0970b8c7f8939e418a7
