--- a/deliverables/pike/murano.yaml
+++ b/deliverables/pike/murano.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/murano
         hash: de887f73b29ab71412eb5b5e31c1c81f941e447e
+  - version: 4.0.0.0b3
+    projects:
+      - repo: openstack/murano
+        hash: 11764eeb883bf6f39153a6225f4260213949c666
