--- a/deliverables/pike/python-muranoclient.yaml
+++ b/deliverables/pike/python-muranoclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-muranoclient
         hash: cae67a4c1e16b84835fcdcba59bcac5344f98aa9
+  - version: 0.14.0
+    projects:
+      - repo: openstack/python-muranoclient
+        hash: 5cc4d2c254e01d4dfb5e806965b5f88e05ba4736
