--- a/deliverables/pike/python-ironicclient.yaml
+++ b/deliverables/pike/python-ironicclient.yaml
@@ -22,3 +22,7 @@ releases:
     projects:
       - repo: openstack/python-ironicclient
         hash: 035aff25d384c0816176e63ec1c027fbb022f1b4
+  - version: 1.16.0
+    projects:
+      - repo: openstack/python-ironicclient
+        hash: 835c5d4c57ddb700cc50c2d7ed8eef6b177a15c2
