--- a/deliverables/pike/watcher-dashboard.yaml
+++ b/deliverables/pike/watcher-dashboard.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/watcher-dashboard
         hash: 87243e036584b8910c8a79523aefc428aabda7f7
+  - version: 1.3.0
+    projects:
+      - repo: openstack/watcher-dashboard
+        hash: 7015a03eb1a8c66f111925fbb1dc990b64843d11
