--- a/deliverables/pike/python-ironic-inspector-client.yaml
+++ b/deliverables/pike/python-ironic-inspector-client.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/python-ironic-inspector-client
         hash: 045fd9e680f5a3153d147950c4cb866a313e15e0
+  - version: 2.0.0
+    projects:
+      - repo: openstack/python-ironic-inspector-client
+        hash: 0ccc7674d8d61f28d5c0880caab35c6eff620dc6
