--- a/deliverables/pike/python-watcherclient.yaml
+++ b/deliverables/pike/python-watcherclient.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/python-watcherclient
         hash: 5cbce9fb204b7f14f8be0b0497033865724875f1
+  - version: 1.3.0
+    projects:
+      - repo: openstack/python-watcherclient
+        hash: c02f584b337b052d5937bbda09bd7006d2118b12
