--- a/deliverables/pike/watcher.yaml
+++ b/deliverables/pike/watcher.yaml
@@ -15,3 +15,8 @@ releases:
       - repo: openstack/watcher
         hash: d7a44739a6dae8f4a6fa66408d46dad9b6fd8262
         tarball-base: python-watcher
+  - version: 1.3.0
+    projects:
+      - repo: openstack/watcher
+        hash: 5817f6833c569c7ff4d158314a47c29fddb3f110
+        tarball-base: python-watcher
